NierDance.theme.css
/* ... */
.chat .messages, .container-iksrDt {background-color: rgba(0,0,0,0);}
.chat .avatar-large {border-radius: 2px;}
.theme-dark .typing-2GQL18{bottom:100%;width:auto}
.theme-dark .inner-zqa7da {border-radius: 0px; background-color:rgba(0,0,0,0.4)}
.theme-dark .friends-table .messages .divider:not(.red) span, .theme-dark .messages-wrapper .messages .divider:not(.red) span {color: #202225}
.theme-dark .autocomplete-1vrmpx{background-color:rgba(165,164,151,.8)}
.theme-dark .selectorSelected-1_M1WV{background:rgba(105,104,91,.3)}
.theme-dark .message-group .comment .markup {color: hsl(0, 0%, 100%); text-shadow: -1px -2px 7px black}
.theme-dark .message-group h2 strong {text-shadow: -1px -1px 1px rgba(0,0,0,.58)}
.theme-dark .message-group .comment .markup .mention{background:transparent;color:#f04747}
.theme-dark .message-group .comment .markup .mention:hover{background:transparent;color:rgb(200,101,101); text-shadow: -1px -2px 7px #f04747}

/*profile popout*/
.theme-dark .quickMessage-1yeL4E {background-color: transparent;border-color: transparent;color: hsla(0,0%,100%,.7)}
.theme-dark .headerNormal-T_seeN,
.theme-dark .headerNormal-T_seeN + .body-3iLsc4,
.theme-dark .headerNormal-T_seeN  ~ .footer-1fjuF6{background:rgba(165,164,151,.85)}
.headerPlaying-j0WQBV,
.headerPlaying-j0WQBV + .body-3iLsc4,
.headerPlaying-j0WQBV ~ .footer-1fjuF6{background:rgba(114,137,218,.85)}
.headerStreaming-2FjmGz,
.headerStreaming-2FjmGz  + .body-3iLsc4,
.headerStreaming-2FjmGz ~ .footer-1fjuF6{background:rgba(89,54,149,.85)}
.headerSpotify-zpWxgT,
.headerSpotify-zpWxgT  + .body-3iLsc4,
.headerSpotify-zpWxgT ~ .footer-1fjuF6{background:rgba(29,185,84,.85)}
.theme-dark .topSectionNormal-2-vo2m,
.theme-dark .topSectionNormal-2-vo2m + .body-3ND3kc{background:rgba(214, 213, 193, 0.85)}
.topSectionSpotify-1lI0-P,
.topSectionSpotify-1lI0-P + .body-3ND3kc{background: rgba(29,185,84,.85)}
.topSectionPlaying-1J5E4n,
.topSectionPlaying-1J5E4n + .body-3ND3kc{background: rgba(114,137,218,.85)}
.topSectionStreaming-1Tpf5X + .body-3ND3kc{background: rgba(89, 54, 149, .8)}

.avatarHint-1qgaV3 {border-radius: 0px}

/* emoji */
#app-mount #bda-qem-favourite-container, #app-mount #bda-qem-twitch-container,#app-mount .emojiPicker-3m1S-j{background: rgba(195,194,181,.8)}
#app-mount .emojiPicker-3m1S-j .header-1nkwgG .search-bar{background: transparent}
.emojiPicker-3m1S-j .stickyHeader-1SS0JU{background: transparent}
#app-mount .emojiPicker-3m1S-j .category-2U57w6{background:rgb(65,64,56)}

#app-mount #bda-qem{background: rgba(195,194,181,.8);border-color:rgba(95,94,81,.8)}
#app-mount #bda-qem button{background:rgba(195,194,181,.8);border-radius:0;border-color:rgba(95,94,81,.8)}
#app-mount #bda-qem button:hover{background: rgba(145,144,131,.8)}
#app-mount #bda-qem button.active{background: rgba(125,124,111,.8)}

#app-mount #bda-qem-twitch-container .scroller::-webkit-scrollbar,#app-mount #bda-qem-twitch-container .scroller::-webkit-scrollbar-track,#app-mount #bda-qem-twitch-container .scroller::-webkit-scrollbar-track-piece,#app-mount #bda-qem-favourite-container::-webkit-scrollbar,#app-mount #bda-qem-favourite-container::-webkit-scrollbar-track,#app-mount #bda-qem-favourite-container::-webkit-scrollbar-track-piece,#app-mount .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar,#app-mount .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar-track,#app-mount .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar-track-piece{background: transparent!Important;border:none!Important}
#app-mount #bda-qem-twitch-container .scroller::-webkit-scrollbar-thumb,.#app-mount #bda-qem-favourite-container .scroller::-webkit-scrollbar-thumb,#app-mount .scrollerThemed-2oenus.themeLight-1_DWyY .scroller-2FKFPG::-webkit-scrollbar-thumb{background: rgb(65,64,56)!Important}

/* friend */
.theme-dark #friends .friends-table .friends-row:hover{background:rgba(105,104,91,.3)}
.theme-dark #friends .tab-bar .tab-bar-item:hover:not(.selected){background:rgb(95,94,81)}

/* recent mentions & pinned messages */
.theme-dark .messagesPopoutWrap-1MQ1bW .header-ykumBX,
.theme-dark .messagesPopoutWrap-1MQ1bW .messagesPopout-24nkyi .message-group {
    border-radius:0;background-color: rgb(145,144,131)
}
.theme-dark .messagesPopoutWrap-1MQ1bW{border-radius:0;background:rgba(195,194,181,.8)}

.theme-dark .searchPopout-1vUlP3{background-color:rgba(165,164,151,.8)}
.theme-dark .option-96V44q.selected-rZcOL-{background: rgba(65,64,51,.6)}


.theme-dark .calendarPicker-2yf6Ci .react-datepicker,.theme-light .calendarPicker-2yf6Ci .react-datepicker{background-color: rgba(165, 164, 151, .85)}
.theme-dark .calendarPicker-2yf6Ci .react-datepicker__header,.theme-light .calendarPicker-2yf6Ci .react-datepicker__header {background-color: rgba(165, 164, 151, .85)}
.theme-dark.calendarPicker-2yf6Ci .react-datepicker__current-month,.theme-light .calendarPicker-2yf6Ci .react-datepicker__current-month {border-bottom-color: hsla(210,3%,87%,);color: white}
.theme-dark .calendarPicker-2yf6Ci .react-datepicker__day-name,.theme-light .calendarPicker-2yf6Ci .react-datepicker__day-name {color: white}
.theme-dark .calendarPicker-2yf6Ci .react-datepicker__day.react-datepicker__day--disabled,.theme-dark .calendarPicker-2yf6Ci .react-datepicker__day.react-datepicker__day--disabled:hover,.theme-light .calendarPicker-2yf6Ci .react-datepicker__day.react-datepicker__day--disabled,.theme-light .calendarPicker-2yf6Ci .react-datepicker__day.react-datepicker__day--disabled:hover {color: white;background: rgba(65,64,51,.4)}
.theme-dark .calendarPicker-2yf6Ci .react-datepicker__day,.theme-light .calendarPicker-2yf6Ci .react-datepicker__day {color: red}

.theme-dark .search-results-wrap .search-result:before,.theme-dark .search-results-wrap .search-result:after,.search-results-wrap,.theme-dark .search-results-wrap .search-header,.theme-dark .search-results-wrap .search-result .hit{background:rgb(165,164,151)!important;border:1px rgb(105,104,81)!important;box-shadow:0 0 10px rgb(105,104,81)!important}
/* ... */

